--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>6.9.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
     </dependencies>
 
 
