--- a/pom.xml
+++ b/pom.xml
@@ -22,24 +22,20 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-testng</artifactId>
-            <version>2.6.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
-        </dependency>
-
-
         <!--<dependency>-->
             <!--<groupId>io.qameta.allure</groupId>-->
             <!--<artifactId>allure-testng</artifactId>-->
             <!--<version>2.6.0</version>-->
+            <!--<scope>test</scope>-->
         <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-simple</artifactId>-->
+            <!--<version>1.7.5</version>-->
+        <!--</dependency>-->
+
+
 
         <!--<dependency>-->
             <!--<groupId>org.slf4j</groupId>-->
